# MediaPlayer

./: CMakeLists.txt
Libs/: CMakeLists.txt
Libs/GoogleTests/: CMakeLists.txt
Libs/Qt/: CMakeLists.txt
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt  main.cpp
Source/ControlVideoWidget/: CMakeLists.txt  controlvideowidget.cpp  controlvideowidget.h
Source/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Source/PlayerWidget/: CMakeLists.txt  playerwidget.cpp  playerwidget.h
Source/SettingsWidget/: CMakeLists.txt  settingswidget.h
Tests/: CMakeLists.txt
